@@ -687,6 +687,11 @@ JLIB_FORM_INVALID_FORM_OBJECT="Invalid Form Object::%s"
 JLIB_FORM_VALIDATE_FIELD_REQUIRED="Field required: %s"
 JLIB_FORM_VALIDATE_FIELD_RULE_MISSING="Validation Rule missing: %s"
 JLIB_FORM_VALIDATE_FIELD_INVALID="Invalid field: %s"
+JLIB_FORM_VALUE_CACHE_FILE="File"
+JLIB_FORM_VALUE_CACHE_MEMCACHE="Memcache"
+JLIB_FORM_VALUE_SESSION_DATABASE="Database"
+JLIB_FORM_VALUE_SESSION_MEMCACHE="Memcache"
+JLIB_FORM_VALUE_SESSION_NONE="None"
 
 JLIB_HTML_ACCESS_EDIT_GROUPS="Edit Groups"
 JLIB_HTML_ACCESS_MODIFY_DESC_CAPTION_ACL="ACL"
