@@ -31,6 +31,7 @@ $ -> Language fix or change
 $ Deleting unused strings in main ini file
 $ Changed toolbar to "Delete" in com_users
 # Fixed [20365] Config modal error display. Thank you Artyom.
+# Fixed Translation of memcache/file in cache handler (Thanks Dennis)
 
 07-May-2010 Ian MacLennan
  # Fixing unit tests to reflect database changes
